Fixed Nav Bar and Spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,15 @@ body {
   font-family:Arial;
   font-size:100%;
 }
-.navbar ul li a{
+.border{
   border-right: 2px solid grey;
   padding-right:7.5px;
   color:#777777;
+}
+
+.navbar ul li a{
+  color:#777777;
+  font-size:15px;
 }
 .navbar ul li a:hover{
   color:#4aaaa5;
